syntax = "proto3";

package admin;

import "errors/errors.proto";
option go_package = "./;errors";
enum Reason {
  // 设置缺省错误码
  option (errors.default_code) = 200;

  NotFoundError = 0[(errors.message)="数据不存在"];
  DatabaseError = 1[(errors.message)="数据库错误"];
  MetadataError = 2[(errors.message)="元数据异常"];
  TransformError = 3[(errors.message)="数据转换失败"];
  DataError = 4[(errors.message)="数据错误"];
  ResourceServiceError = 5[(errors.message)="资源服务异常"];
  GetAuthInfoError = 6[(errors.message)="获取授权信息失败"];
  UnBindError = 7[(errors.code)=401,(errors.message)="用户未绑定"];
  BindError = 8[(errors.code)=401,(errors.message)="用户未绑定"];
  LoginError = 9[(errors.message)="登录失败"];
  AlreadyBindError = 10[(errors.message)="已存在绑定信息"];
  UsernameFormatError = 11[(errors.message)="用户名格式错误"];
  CaptchaError = 12[(errors.message)="验证码错误"];
  UsernameNotExistError = 13[(errors.message)="账户信息不存在"];
  SendEmailCaptchaError = 14[(errors.message)="发送验证码失败"];
  RefreshTokenError = 15 [(errors.code)=401,(errors.message)="刷新token失败"];
  AuthInfoError = 16[(errors.message)="授权信息错误"];
  UserCenterError = 17[(errors.message)="用户中心连接失败"];
  ResourceError = 18[(errors.message)="资源中心连接失败"];
}


